<resources>
    <string name="app_name">Avit</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="home">Home</string>
    <string name="select">Select</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="deals">Deals</string>
    <string name="rewards">Rewards</string>
    <string name="piece">%s /Piece</string>
    <string name="do_you_need_help">Do you need help ? Call us!</string>
    <string name="get_support_whatsapp">Get Support via Whatsapp</string>
    <string name="get_support_mail">Get Support via e-mail</string>
    <string name="one_kg">%s /1 KG</string>
    <string name="popular_question">Popular Question</string>
    <string name="influencer">influencer</string>
    <string name="shipping_delivery">Shipping Delivery</string>
    <string name="membership_registration">Membership Registration</string>
    <string name="order">Order</string>
    <string name="review_cart">Review Cart</string>
    <string name="no_location">No Location Selected</string>
    <string name="delivered">Delivered</string>
    <string name="pickup" translatable="false">Pickup</string>
    <string name="profile">Profile</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="my_orders">My Orders</string>
    <string name="empty">No Data Available</string>
    <string name="change_branch">Change Branch</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="payment_method">Payment Method</string>
    <string name="receipt_method">Receipt Method</string>
    <string name="done">Done</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount :</string>
    <string name="update">Update</string>
    <string name="gender">Gender</string>
    <string name="show_my_returns">Show My Returns</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="create_account">Create an Account</string>
    <string name="agreement">By signing up, you agree to our terms of services &amp; Privacy Policy</string>
    <string name="forget_pass"><u>Forgot your password?</u></string>
    <string name="reset_it">Reset it</string>
    <string name="email_address">Email Address</string>
    <string name="join_zoonni">Join Zoonni Today Create an account to continue shopping</string>
    <string name="select_location">Select location on map</string>
    <string name="saved_address">Saved Address</string>
    <string name="saved_address_success">Address Saved Successfully</string>
    <string name="save">Save</string>
    <string name="set_as_defult">Set as Defult</string>
    <string name="shopping">Continue Shopping</string>
    <string name="edit_address">Edit Address</string>
    <string name="city">City</string>
    <string name="choose">Choose</string>
    <string name="area">Area</string>
    <string name="building_no">Building No</string>
    <string name="apt_no">Apt No</string>
    <string name="street">Street</string>
    <string name="login">Login</string>
    <string name="gallery">Gallery</string>
    <string name="order_send">Order Send</string>
    <string name="facebook_app_id" translatable="false">2509175212722254</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2509175212722254</string>
    <string name="email_sign_in">Continue with email</string>
    <string name="google_sign_in">Continue with google</string>
    <string name="facebook_sign_in">Continue with facebook</string>
    <string name="choose_branch">Choose branch</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="view_cart">Show Cart</string>
    <string name="alert">Alert</string>
    <string name="place_order">Place Order</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="logo" translatable="false">logo</string>
    <string name="log_in_or">Log in or Create account</string>
    <string name="client_server_id" translatable="false">1052065177977-98f573e1koed09j6qjfoocr643pdi6bc.apps.googleusercontent.com</string>
    <string name="error">No Internet connection</string>
    <string name="required">Required</string>
    <string name="camera">camera</string>
    <string name="birth_date">Birth date</string>
    <string name="jordan_flag">jordan flag</string>
    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="payment_methods_array">
        <item>Select</item>
        <item>Cash</item>
        <item>Online</item>
    </string-array>
    <string name="pass_mismatch">Password Not Matching</string>
    <string name="gender_required">Please Select Gender</string>
    <string name="require_image">Please Select Image</string>
    <string name="denied">Permission Denied</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="header" translatable="false">header</string>
    <string name="menu" translatable="false">menu</string>
    <string name="loading">Please Wait</string>
    <string name="product_image">product image</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="related_products">Related Products</string>
    <string name="item_detail">Item Detail</string>
    <string name="kg">KG</string>
    <string name="piece_text">Piece</string>
    <string name="choose_branch_warning">Please choose branch</string>
    <string name="deliver_to">Deliver To</string>
    <string name="add_location">Add Location</string>
    <string name="ops_cancel">Operation Canceled</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm_pin_location">Confirm Pin Location</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="location">Location</string>
    <string name="welcome">Welcome</string>
    <string name="view_all_your_orders_and_exclusive">View all your orders and exclusive</string>
    <string name="select_location_message">Please Select Location</string>
    <string name="country_language_currency">Country, Language and Currency</string>
    <string name="payment_message">Please Select Payment Method</string>
    <string name="receipt_message">Please Select Receipt Method</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="no_email">No Email Client</string>
    <string name="buy_now">Buy it Now</string>
    <string name="order_no">Order No: </string>
    <string name="order_number">Order Number: </string>
    <string name="order_details">Order Details</string>
    <string name="no_of_items">Items : </string>
    <string name="total_price">Total Price:</string>
    <string name="payment_status">Payment Status:</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="quantity">quantity:</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="guest_login">Please Login First</string>
    <string name="open_cart">Open Cart</string>
    <string name="close">Cancel</string>
    <string name="logoutDialog">Do you want to LogOut ?</string>
    <string name="clear_cart_message">There are products in your shopping cart… please empty it before changing the branch!!!!</string>
    <string name="promo_code">Promo Code :</string>
    <string name="apply">apply</string>
    <string name="promo_code_check">Please insert promo code</string>
    <string name="products">Products</string>
    <string name="all_categories">All Categories</string>
    <string name="money">money</string>
    <string name="notificatin">Notificatin</string>
    <string name="welcome_login">Welcome back \n Login with your email and password</string>
    <string name="price">%s JD each</string>
    <string name="women_clothing">Women\'s Clothing </string>
    <string name="delete">Delete</string>
    <string name="item_description">Item Description</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="size_table">Size Table</string>
    <string name="point">Point</string>
    <string name="details">Details :</string>
    <string name="product_code">Product Code</string>
    <string name="fabric_details">Fabric Details</string>
    <string name="size_details">Size Details</string>
    <string name="shop_similar_item">Shop Similar Item</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="personal_info">Personal Information</string>
    <string name="help_center">Help Center</string>
    <string name="agreements">Agreements</string>
    <string name="address">Address</string>
    <string name="select_main">( Select Main )</string>
    <string name="yes">Yes</string>
    <string name="edit_account">Edit Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="search_empty">Search field is empty</string>
    <string name="products_search">Search for products</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="write_your_phone">Enter your Phone</string>
    <string name="write_your_pass">Enter your Password</string>
    <string name="bag">My Bag</string>
    <string name="account">Account</string>
    <string name="fill_yor_name">Fill Your Name</string>
    <string name="my_point">My Point</string>
    <string name="fill_yor_email">Fill Your Email </string>
    <string name="fill_yor_phone">Fill Your Phone</string>
    <string name="fill_yor_pass">Fill Your Password</string>
    <string name="Bycontnue">"By countinuing you may receive SMS for varifcattion.Mesaage and data rales may apply. "</string>
    <string name="dont_have_account">Do not have been an account ?</string>
    <string name="diliver_to">Deliver to</string>
    <string name="pay_with">Pay with</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="message">Type a Message</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="send">Send</string>
    <string name="fill_all_filed">Fill all fields</string>
    <string name="subject">Subject</string>
    <string name="status">Status : </string>
    <string name="payment_date">Order Date</string>
    <string name="date_and_time">Date and Time : </string>
    <string name="expected_delivery">Expected Delivery Date : </string>
    <string name="partial_price">Partial Price :</string>
    <string name="home_store">Home Store</string>
</resources>