<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.OrderDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_order_date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/date_and_time"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_very_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_order_num2"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_num2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_order_date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/partial_price"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_very_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_order_num2"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_date2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_order_date4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/total_price"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_very_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_order_num2"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_date5"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_order_date6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/no_of_items"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_very_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_order_num2"
                app:layout_constraintTop_toBottomOf="@+id/materialButton2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_order_date5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/discount"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_very_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_order_num2"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_date3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_order_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_very_big"
                android:text="@string/order_number"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_line"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/margin_big"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="@+id/tv_order_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_order_details"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tv_order_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_very_big"
                android:padding="@dimen/margin_small"
                android:text="@string/order_details"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_very_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_details" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/show_my_returns"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_date4"
                app:strokeColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_my_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_very_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_order_date6" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>