<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignInActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.247"
            app:srcCompat="@drawable/ic_avit_logo"
            tools:srcCompat="@drawable/ic_avit_logo" />

        <!--TODO replace with edit text if necessary-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/phone_number"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forget_pass"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/forget_pass"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>